Builds nusight2 as with yarn build:ci

--- a/.github/workflows/nusight.yaml
+++ b/.github/workflows/nusight.yaml
@@ -62,7 +62,7 @@ jobs:
 
       - name: Build NUsight
         working-directory: nusight2
-        run: yarn build
+        run: yarn build:ci
 
   # Build the NUsight Storybook code
   build-nusight-storybook:
