--- a/.github/workflows/nusight.yaml
+++ b/.github/workflows/nusight.yaml
@@ -36,8 +36,25 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
+      # Get our yarn cache if it exists
+      # See https://github.com/actions/cache/blob/master/examples.md#node---yarn
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      # Check if the yarn cache directory is valid
+      - uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit`
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      # Install dependencies if we had a yarn cache miss
       - name: Install Dependencies
         working-directory: nusight2
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn
 
       - name: Run eslint
@@ -64,8 +81,25 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
+      # Get our yarn cache if it exists
+      # See https://github.com/actions/cache/blob/master/examples.md#node---yarn
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      # Check if the yarn cache directory is valid
+      - uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit`
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      # Install dependencies if we had a yarn cache miss
       - name: Install Dependencies
         working-directory: nusight2
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn
 
       - name: Build NUsight
@@ -92,8 +126,25 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
+      # Get our yarn cache if it exists
+      # See https://github.com/actions/cache/blob/master/examples.md#node---yarn
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      # Check if the yarn cache directory is valid
+      - uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit`
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      # Install dependencies if we had a yarn cache miss
       - name: Install Dependencies
         working-directory: nusight2
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn
 
       - name: Build NUsight
@@ -120,8 +171,25 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
+      # Get our yarn cache if it exists
+      # See https://github.com/actions/cache/blob/master/examples.md#node---yarn
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      # Check if the yarn cache directory is valid
+      - uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit`
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      # Install dependencies if we had a yarn cache miss
       - name: Install Dependencies
         working-directory: nusight2
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn
 
       - name: Build NUsight
