--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -26,7 +26,7 @@ jobs:
     steps:
       # Cancels previously running jobs for this workflow
       - name: Cancel Workflow Action
-        uses: styfle/cancel-workflow-action@0.9.
+        uses: styfle/cancel-workflow-action@0.9.1
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Code
@@ -79,7 +79,7 @@ jobs:
     steps:
       # Cancels previously running jobs for this workflow
       - name: Cancel Workflow Action
-        uses: styfle/cancel-workflow-action@0.9.
+        uses: styfle/cancel-workflow-action@0.9.1
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Code
@@ -120,7 +120,7 @@ jobs:
     steps:
       # Cancels previously running jobs for this workflow
       - name: Cancel Workflow Action
-        uses: styfle/cancel-workflow-action@0.9.
+        uses: styfle/cancel-workflow-action@0.9.1
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Code
@@ -145,7 +145,7 @@ jobs:
     steps:
       # Cancels previously running jobs for this workflow
       - name: Cancel Workflow Action
-        uses: styfle/cancel-workflow-action@0.9.
+        uses: styfle/cancel-workflow-action@0.9.1
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Code
@@ -170,7 +170,7 @@ jobs:
     steps:
       # Cancels previously running jobs for this workflow
       - name: Cancel Workflow Action
-        uses: styfle/cancel-workflow-action@0.9.
+        uses: styfle/cancel-workflow-action@0.9.1
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Code
