--- a/.github/workflows/nusight.yaml
+++ b/.github/workflows/nusight.yaml
@@ -30,7 +30,7 @@ jobs:
     steps:
       # Cancels previously running jobs for this workflow
       - name: Cancel Workflow Action
-        uses: styfle/cancel-workflow-action@0.9.
+        uses: styfle/cancel-workflow-action@0.9.1
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Code
@@ -75,7 +75,7 @@ jobs:
     steps:
       # Cancels previously running jobs for this workflow
       - name: Cancel Workflow Action
-        uses: styfle/cancel-workflow-action@0.9.
+        uses: styfle/cancel-workflow-action@0.9.1
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Code
@@ -120,7 +120,7 @@ jobs:
     steps:
       # Cancels previously running jobs for this workflow
       - name: Cancel Workflow Action
-        uses: styfle/cancel-workflow-action@0.9.
+        uses: styfle/cancel-workflow-action@0.9.1
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Code
@@ -165,7 +165,7 @@ jobs:
     steps:
       # Cancels previously running jobs for this workflow
       - name: Cancel Workflow Action
-        uses: styfle/cancel-workflow-action@0.9.
+        uses: styfle/cancel-workflow-action@0.9.1
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Code
