Changes CI_BUILD so that it will still work right now
We can re-enable the error on warnings and clang-tidy parts that CI_BUILD used to enable once they don't break builds (soon^TM)

--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -61,8 +61,6 @@ jobs:
         run: echo "::set-output name=image::nubots/nubots:${{ hashFiles('docker/**') }}"
 
   # Build the codebase
-  # TODO: Run clang-tidy too, once the existing warnings have been fixed across the codebase
-  # TODO: Add -DCI_BUILD=ON once clang-tidy is enabled and compiler warnings have been fixed
   build_nubots:
     name: "Build and test NUbots"
 
@@ -92,7 +90,8 @@ jobs:
           cmake .. -GNinja \
                    -DCMAKE_BUILD_TYPE=Release \
                    -DCMAKE_TOOLCHAIN_FILE=/usr/local/toolchain.cmake \
-                   -DBUILD_TESTS=ON
+                   -DBUILD_TESTS=ON \
+                   -DCI_BUILD=ON
 
       - name: Build the code
         run: |
