--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -47,7 +47,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           pull: true
-          tags: "nubots/nubots:${{ hashFiles('docker/**') }}"
+          tags: "nubots/nubots:pull_request#${{ github.event.number }}"
           file: docker/Dockerfile
           context: docker
           build-args: |
@@ -58,7 +58,7 @@ jobs:
 
       - id: image_output
         name: Output the created image
-        run: echo "::set-output name=image::nubots/nubots:${{ hashFiles('docker/**') }}"
+        run: echo "::set-output name=image::nubots/nubots:pull_request#${{ github.event.number }}"
 
   # Build the codebase
   build_nubots:
