--- a/.github/workflows/dockerhub-cleanup.yaml
+++ b/.github/workflows/dockerhub-cleanup.yaml
@@ -22,4 +22,4 @@ jobs:
         run: |
           curl -i -X DELETE \
             -u "${{ secrets.DOCKERHUB_USERNAME }}:$${{ secrets.DOCKERHUB_PASSWORD }}" \
-            https://cloud.docker.com/v2/repositories/nubots/nubots/tags/pull_request#${{ github.event.number }}/
+            https://cloud.docker.com/v2/repositories/nubots/nubots/tags/pull-request-${{ github.event.number }}/
