--- a/.github/workflows/images.yaml
+++ b/.github/workflows/images.yaml
@@ -9,12 +9,16 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # Build the nuc8i7beh image
-  build_nuc8i7beh:
-    name: "Build nuc8i7beh image"
+  # Build and push all images
+  build_and_push:
+    name: "Build and Push Docker Images"
 
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
+
+    strategy:
+      matrix:
+        platform: ["generic", "nuc8i7beh", nuc7i7bnh]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -37,48 +41,11 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           pull: true
-          tags: "nubots/nubots:nuc8i7beh"
+          tags: "nubots/nubots:${{ matrix.platform }}"
           file: docker/Dockerfile
           context: docker
           build-args: |
-            platform=nuc8i7beh
+            platform=${{ matrix.platform }}
           push: true
-          cache-from: type=registry,ref=nubots/nubots:nuc8i7beh
-          cache-to: type=inline
-
-  # Build the nuc7i7bnh image
-  build_nuc7i7bnh:
-    name: "Build nuc7i7bnh image"
-
-    # The type of runner that the job will run on
-    runs-on: ubuntu-20.04
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout Code
-        uses: actions/checkout@v2
-
-      # Setup docker buildx
-      - name: 🐳 Set up docker buildx 🐳
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      # Build the docker image
-      - name: 🐳 Build the docker image 🐳
-        uses: docker/build-push-action@v2
-        with:
-          pull: true
-          tags: "nubots/nubots:nuc7i7bnh"
-          file: docker/Dockerfile
-          context: docker
-          build-args: |
-            platform=nuc7i7bnh
-          push: true
-          cache-from: type=registry,ref=nubots/nubots:nuc7i7bnh
+          cache-from: type=registry,ref=nubots/nubots:${{ matrix.platform }}
           cache-to: type=inline
