--- a/.github/workflows/dockerhub-cleanup.yaml
+++ b/.github/workflows/dockerhub-cleanup.yaml
@@ -3,9 +3,10 @@ name: DockerHub Clean-up
 
 # Controls when the action will run.
 on:
-  # Triggers the workflow on push events but only for the main branch
-  push:
-    branches: [main]
+  # Triggers the workflow on closed events for the main branch
+  pull_request:
+    # 'closed' covers merges too
+    types: [closed]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
