Makes build matrix strings consistent
Co-authored-by Cameron <CMurtagh-LGTM@users.noreply.github.com>

--- a/.github/workflows/images.yaml
+++ b/.github/workflows/images.yaml
@@ -18,7 +18,7 @@ jobs:
 
     strategy:
       matrix:
-        platform: ["generic", "nuc8i7beh", nuc7i7bnh]
+        platform: ["generic", "nuc8i7beh", "nuc7i7bnh"]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
