--- a/nusight2/.gitignore
+++ b/nusight2/.gitignore
@@ -26,6 +26,7 @@ yarn-error.log*
 # Generated protocol buffer files
 /src/shared/messages.js
 /src/shared/messages.d.ts
+src/shared/message_fields_index.ts
 
 # NBS recordings
 /recordings
