Adds some string test vals

--- a/shared/tests/data/yamlConversionTestVals.yaml
+++ b/shared/tests/data/yamlConversionTestVals.yaml
@@ -32,3 +32,10 @@ doubles:
   - 0.00003000000000
   - 0.00000000000300
   - 1.41950444107972
+strings:
+  - "test string"
+  - "Numb3rs als0"
+  - "ch@rs?"
+  - "1<>:;{%"
+  - "98765abcde"
+  - '\t\w'
