--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -87,7 +87,8 @@ jobs:
         run: mkdir -p ../build
 
       - name: Configure the code
-        run: ./b configure -- -DBUILD_TESTS=ON -DCI_BUILD=ON
+        # TODO(DevOpsTeam): Enable CI_BUILD once we have normal warnings and clang-tidy warnings resolved
+        run: ./b configure -- -DBUILD_TESTS=ON -DCI_BUILD=OFF
 
       - name: Build the code
         run: ./b build
