Adds more caching options
Throwing the book at the problem lol

--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -53,8 +53,13 @@ jobs:
           build-args: |
             platform=generic
           push: true
-          cache-from: type=registry,ref=nubots/nubots:pull-request-${{ github.event.number }}
-          cache-to: type=inline
+          cache-from: |
+            type=registry,ref=nubots/nubots:pull-request-${{ github.event.number }}
+            type=registry,ref=nubots/nubots:generic
+            type=inline
+          cache-to: |
+            type=registry,ref=nubots/nubots:pull-request-${{ github.event.number }}
+            type=inline
 
       - id: image_output
         name: Output the created image
