Sets BUILDKIT_INLINE_CACHE=1 and uses inline cache only

--- a/.github/workflows/images.yaml
+++ b/.github/workflows/images.yaml
@@ -46,6 +46,7 @@ jobs:
           context: docker
           build-args: |
             platform=${{ matrix.platform }}
+            BUILDKIT_INLINE_CACHE=1
           push: true
           cache-from: type=registry,ref=nubots/nubots:${{ matrix.platform }}
           cache-to: type=inline
