--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -54,7 +54,10 @@ jobs:
             platform=generic
             BUILDKIT_INLINE_CACHE=1
           push: true
-          cache-from: type=inline
+          cache-from: |
+            type=registry,ref=nubots/nubots:pull-request-${{ github.event.number }}
+            type=registry,ref=nubots/nubots:generic
+            type=inline
 
       - id: image_output
         name: Output the created image
