Reverts changes added doing previous python solution

--- a/.buildkite/NUbots/docker-compose.yml
+++ b/.buildkite/NUbots/docker-compose.yml
@@ -12,8 +12,7 @@ services:
       - type: bind
         source: ./../..
         target: /home/nubots/NUbots
-        # False, so we can generate a role with unused modules and write it
-        read_only: false
+        read_only: true
         consistency: cached
 
   nuc7i7bnh_image:
