--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -60,6 +60,16 @@ steps:
           run: generic
           workdir: /home/nubots/NUbots/
 
+  # Build **ALL** modules
+  - label: "Build all modules, even those not in roles"
+    command: "./b configure -- -DBUILD_ALL_MODULES=ON && ./b build"
+    plugins:
+      - docker-compose#v3.0.3:
+          config: .buildkite/NUbots/docker-compose.yml
+          pull: generic_image
+          run: generic
+          workdir: /home/nubots/NUbots/
+
   # Build for both nuc targets
   - label: "Build nuc7i7bnh"
     command: echo "nuc7i7bnh image successfully built!"
