--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,11 +42,9 @@ if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
   set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
 endif()
 
-# Default not to run the clang-tidy checks
+# Default not to run the clang-tidy checks, default to whatever our CI_BUILD is
 option(ENABLE_CLANG_TIDY "Enable building with clang-tidy checks." OFF)
-# * TODO: Add CI_BUILD to this `if`, so that clang-tidy runs on CI builds
-# * Do this once we have clang-tidy warnings fixed across the codebase
-if(ENABLE_CLANG_TIDY)
+if(ENABLE_CLANG_TIDY OR CI_BUILD)
   find_package(PythonInterp 3 REQUIRED)
   set(CMAKE_CXX_CLANG_TIDY "${PYTHON_EXECUTABLE}" "${PROJECT_SOURCE_DIR}/cmake/scripts/clang-tidy.py"
                            "${PROJECT_BINARY_DIR}/clang-tidy-fixes" clang-tidy
@@ -62,15 +60,13 @@ if(ENABLE_CLANG_TIDY)
   )
 endif()
 
-# * If we are doing a CI build then we want to enable -Werror when compiling warnings are bad.
-# * We will also make it fail if clang-tidy has an error
-# * TODO(DevOpsTeam): Uncomment this code once we have fixed warnings codebase wide to prevent new warnings being
-#   introduced
-# * if(CI_BUILD)
-# * add_compile_options(-Werror)
-# * set(CMAKE_CXX_CLANG_TIDY ${CMAKE_CXX_CLANG_TIDY} -warnings-as-errors=*)
-# * set(CMAKE_C_CLANG_TIDY ${CMAKE_C_CLANG_TIDY} -warnings-as-errors=*)
-# * endif()
+# If we are doing a CI build then we want to enable -Werror when compiling warnings are bad. We will also make it fail
+# if clang-tidy has an error
+if(CI_BUILD)
+  add_compile_options(-Werror)
+  set(CMAKE_CXX_CLANG_TIDY ${CMAKE_CXX_CLANG_TIDY} -warnings-as-errors=*)
+  set(CMAKE_C_CLANG_TIDY ${CMAKE_C_CLANG_TIDY} -warnings-as-errors=*)
+endif()
 
 # Enable address sanitizer
 option(USE_ASAN "Enable address sanitization" OFF)
